Added support for generating rmic stubs via --generatermistubs=true on deploy. QL and ejb devtests (with the added 'run_cosnaming' passed.
svn path=/trunk/; revision=30551


Former-commit-id: 0995cad20af3cd93208b2ef72ad417583615afc0